fix: add scrollable divs and overflow

--- a/src/components/Map/Planets.module.css
+++ b/src/components/Map/Planets.module.css
@@ -149,6 +149,13 @@
   opacity: 0;
   animation: zoomIn 0.5s ease-out forwards;
   animation-delay: 0.3s;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.planetInfo::-webkit-scrollbar {
+  display: none;
 }
 
 .sectionInfo {
